# AIA_Practica7

./: .dockerignore  .gitattributes  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  backend.py  docker-compose.yml  env_template  frontend.py  pyproject.toml
chroma_db/: chroma.sqlite3
chroma_db/c2c5e4fa-977e-4517-9038-dd2d5f80ab4e/: index_metadata.pickle
utils/: __init__.py
utils/agent/: F_Maternal_Agent.py  F_Medical_Agent.py  __init__.py
utils/logger/: F_logger.py
utils/searcher/: F_Hybrid_Searcher.py  F_Lexical_Searcher.py  F_Semantic_Searcher.py
utils/security/: F_Encrypter.py  F_anonymizer.py  F_prompt_injection.py
utils/tabular/: F_Data_Preprocessor.py  F_Explainer.py  F_XGBoost.py
utils/vision/: F_CNN_Classifier.py  F_UNet_Model.py  F_YOLO_Model.py
weights/: Data_Preprocessor.joblib  XGBoost.joblib  YOLO.pt
