[project]
name = "aia-practica6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "cryptography>=47.0.0",
    "ddgs>=9.13.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.136.1",
    "kagglehub>=1.0.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.6",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "pytest>=9.0.3",
    "sentence-transformers>=5.3.0",
    "spacy>=3.8.14",
    "streamlit>=1.57.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.46",
    "xgboost>=3.2.0",
]
